# mini_rag_qa

./: LICENSE  README.md  main.py  pyproject.toml
data/: qa_dataset.json  urls.txt
data/processed/faiss_index/: index.faiss  index.pkl
scripts/: build_index.py  run_eval.py
src/: chunking.py  config.py  embeddings.py  guardrails.py  ingestion.py  prompt_builder.py  rag_pipeline.py  retriever.py  vector_store.py
